[package]
name = "image-resizer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.16.0"
axum = { version = "0.6.18", features = ["macros"] }
shuttle-axum = "0.16.0"
tokio = "1.28.1"
image = "0.24.6"
fast_image_resize = "2.7.3"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
serde_urlencoded = "0.7.1"
async-trait = "0.1.68"
url_encoded_data = "0.6.1"
serde-aux = "4.2.0"

[dev-dependencies]
axum-macros = "0.3.7"
proptest = "1.1.0"
